--- a/briup/src/druid.properties
+++ b/briup/src/druid.properties
@@ -1,10 +1,10 @@
 driverClassName=oracle.jdbc.OracleDriver
 url=jdbc:oracle:thin:@127.0.0.1:1521:XE
-username=bttc1
-password=bttc1
-# 初始化连接数量
+username=briup
+password=briup
+# \u521D\u59CB\u5316\u8FDE\u63A5\u6570\u91CF
 initialSize=5
-# 最大连接数
+# \u6700\u5927\u8FDE\u63A5\u6570
 maxActive=10
-# 最大等待时间
+# \u6700\u5927\u7B49\u5F85\u65F6\u95F4
 maxWait=3000
